force-app/main/default/objects/Stadium_Register__c/Stadium_Register__c.object-meta.xml
<CustomObject>
    <label>Stadium Register</label>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Stadium Registry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stadium Registers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>