force-app/main/default/objects/Stadium_Register__c/fields/Football_Club__c.field-meta.xml
<CustomField>
    <fullName>Football_Club__c</fullName>
    <label>Football Club</label>
    <referenceTo>Football_Club__c</referenceTo>
    <relationshipLabel>Stadium Registers</relationshipLabel>
    <relationshipName>Stadium_Registers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>