force-app/main/default/objects/Stadium_Register__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <label>Stadium</label>
    <referenceTo>Stadium__c</referenceTo>
    <relationshipLabel>Stadium Registers</relationshipLabel>
    <relationshipName>Stadium_Registers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>