force-app/main/default/objects/Stadium_Register__c/fields/Stadium_Role__c.field-meta.xml
<CustomField>
    <fullName>Stadium_Role__c</fullName>
    <label>Stadium Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Alternative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>